[metadata]
name = transformcl
version = attr:transformcl.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = transform angular power spectra and correlation functions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/cltools/transformcl
project_urls =
    Documentation = https://cltools.readthedocs.io/transformcl/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    flt>=2022.7.27
py_modules = transformcl
